crates/data-dict/tests/snapshots/validate_spec__s07_examples_on_boolean.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  table:
    columns:
      - name: active
        type: boolean
        examples: [true, false]
────────────────────────────────────────
Error: [S07] A `boolean` column must not have `values`, `range`, or `examples`.
   ╭─[ dict.yaml:8:19 ]
   │
 4 │   table:
   │ 
 6 │       - name: active
   │ 
 8 │         examples: [true, false]
   │                   ──────┬─────  
   │                         ╰─────── has type `boolean` but uses `examples`
───╯
