crates/data-dict/tests/snapshots/validate_spec__s07_wrong_rep_on_enum.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s07-wrong-rep-on-enum.yaml\")"
---
Error: [S07] An `enum` column must list its categories with `values`.
   ╭─[ spec/s07-wrong-rep-on-enum.yaml:9:15 ]
   │
 6 │   table:
   │ 
 8 │       - name: status
 9 │         type: enum
   │               ──┬─  
   │                 ╰─── has type `enum` but is missing `values`
───╯

Error: [S07] An `enum` column must use `values`, not `range`.
    ╭─[ spec/s07-wrong-rep-on-enum.yaml:10:16 ]
    │
  6 │   table:
    │ 
  8 │       - name: status
    │ 
 10 │         range: [0, 10]
    │                ───┬──  
    │                   ╰──── has type `enum` but uses `range`
────╯
