crates/data-dict/tests/snapshots/validate_spec__s11_empty_table_name.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: ""
    columns:
      - name: id
        type: number(id)
        examples: [1, 2, 3]
────────────────────────────────────────
error: [S11] A table must have a non-empty name.
 --> dict.yaml:4:11
  |
4 |   - name: ""
  |           ^ table name is empty
